cmake_minimum_required(VERSION 3.2)
project(MyCLIApp LANGUAGES CXX)

set(TEAM_ID "" CACHE STRING "The development team ID for code signing")

if(TEAM_ID STREQUAL "")
    message(FATAL_ERROR "Please set the TEAM_ID variable when generating the project")
endif()


set(APP_NAME MyCLIApp)

set(XCODE_ATTRIBUTE_CODE_SIGN_STYLE "Manual")
set(XCODE_ATTRIBUTE_DEVELOPMENT_TEAM ${TEAM_ID})
set(XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY "Developer ID Application")
set(XCODE_ATTRIBUTE_CODE_SIGNING_REQUIRED TRUE)

add_executable(${APP_NAME} main.cpp)

set_target_properties(${APP_NAME} PROPERTIES
    XCODE_ATTRIBUTE_CODE_SIGN_STYLE ${XCODE_ATTRIBUTE_CODE_SIGN_STYLE}
    XCODE_ATTRIBUTE_DEVELOPMENT_TEAM ${XCODE_ATTRIBUTE_DEVELOPMENT_TEAM}
    XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY ${XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY}
    XCODE_ATTRIBUTE_CODE_SIGNING_REQUIRED ${XCODE_ATTRIBUTE_CODE_SIGNING_REQUIRED}
)

string(TOLOWER ${PROJECT_NAME} CPACK_PACKAGE_NAME)
set(CPACK_VERBATIM_VARIABLES YES)
set(CPACK_GENERATOR ZIP)
include(CPack)
